tests/negative/gold/incomplete-string5-test.gold
tests/negative/incomplete-string5-test.toit:7:8: error: Unterminated string
  "$foo \
       ^~
Compilation failed
